default/joshcorp-landing/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: joshcorp-landing
  labels:
    app: joshcorp-landing
    app.kubernetes.io/name: joshcorp-landing
spec:
  selector:
    app.kubernetes.io/name: joshcorp-landing
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joshcorp-landing
spec:
  selector:
      matchLabels:
        app.kubernetes.io/name: joshcorp-landing
  template:
    metadata:
      labels:
        app: joshcorp-landing
        app.kubernetes.io/name: joshcorp-landing
    spec:
      containers:
      - name: joshcorp-landing
        image: kasuboski/joshcorp-site
        ports:
          - name: http
            containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
