default/joshcorp-landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: joshcorp-landing
  name: joshcorp-landing
spec:
  ingressClassName: nginx
  rules:
  - host: joshcorp.co
    http:
      paths:
      - backend:
          service:
            name: joshcorp-landing
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - joshcorp.co
    secretName: root-joshcorp-tls
